--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,15 @@
 <body>
     
 
-        <nav class="navbar navbar-fixed-top">
+        <nav class="navbar">
 
                 <div class="container">
-                    <ul class="nav navbar-nav navbar-expand-sm collapse navbar-collapse">
+                    <ul class="nav navbar-nav ">
                             <li> <a href="index.html"> <img width="50" height="50" class="img-circle" src="satishkumar.jpg" alt="satishkumar"/></a> </li>
                         <li ><a href="index.html">Home</a></li>
                         <li class="active"><a href="#">contact</a></li>
                         <li><a href="app.html">My App</a></li>
+                        <li><a href="test/qunit.html">Qunit</a></li>
                         
                       </ul>
                 </div>
